build: bump version to v0.8.48
Target java 8 with --release (fixes a java-10-only URLEncoder call), force the
junit 5 surefire provider, verify a known seed-to-address vector, and pin
CI-invoked maven plugins.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>